# proxy-over-ssh

./: .gitignore  BackendSocket.h  Buffer.h  CMakeLists.txt  CancellationToken.cpp  CancellationToken.h  CompletionSignal.h  Constants.h  CoroTask.cpp  CoroTask.h  Endpoint.cpp  Endpoint.h  FdUtils.h  IdleTimer.h  LICENSE  Logger.h  README.md  SSHProxy.cpp  SSHProxy.h  SessionPool.cpp  SessionPool.h  Socket.cpp  Socket.h  SshConStateMachine.cpp  SshConStateMachine.h  SshError.h  SshSessionHandler.cpp  SshSessionHandler.h  SshSocket.cpp  SshSocket.h  Timer.h  Types.h  main.cpp
android/ProxyApp/app/: build.gradle.kts
android/ProxyApp/app/src/androidTest/java/io/sshproxy/app/: ExampleInstrumentedTest.kt
android/ProxyApp/app/src/main/: AndroidManifest.xml
android/ProxyApp/app/src/main/cpp/: CMakeLists.txt  hev-compat.c  proxy-over-ssh  sshproxy_jni.cpp
android/ProxyApp/app/src/main/java/io/sshproxy/app/: AppSettings.kt  EditProfileScreen.kt  MainActivity.kt  MainScreen.kt  ProxyNative.kt  ProxyService.kt  SettingsScreen.kt  SshProfile.kt
android/ProxyApp/app/src/main/java/io/sshproxy/app/ui/theme/: Color.kt  Theme.kt  Type.kt
android/ProxyApp/app/src/test/java/io/sshproxy/app/: ExampleUnitTest.kt
android/ProxyApp/gradle/wrapper/: gradle-wrapper.properties
systemd/: proxy_over_ssh.service
